[gd_scene load_steps=10 format=3 uid="uid://bd2yc86l7itq1"]

[ext_resource type="Script" uid="uid://rcxqt2dhflsc" path="res://Scripts/side_2.gd" id="1_u05wf"]
[ext_resource type="Texture2D" uid="uid://ttcehit6uald" path="res://Assets/Dark/texture_08.png" id="2_ibtkd"]
[ext_resource type="PackedScene" uid="uid://dk7346dyrdsro" path="res://Scenes/Tree.tscn" id="3_wqpna"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_55n1c"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_kis7x"]
sky_material = SubResource("ProceduralSkyMaterial_55n1c")

[sub_resource type="Environment" id="Environment_1r2xf"]
background_mode = 2
sky = SubResource("Sky_kis7x")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1r2xf"]
albedo_texture = ExtResource("2_ibtkd")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_mbl57"]
size = Vector3(42.268005, 14.877441, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_i3nr6"]
size = Vector3(41.918213, 13.377014, 1.0535889)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_u05wf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1r2xf")

[node name="City" type="CSGCombiner3D" parent="."]
transform = Transform3D(5.5887423, 0, 0, 0, 1, 0, 0, 0, 4.678951, 4.18157, 0.31652832, 0.070453644)
material_override = SubResource("StandardMaterial3D_1r2xf")
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="City"]
transform = Transform3D(7.6658883, 0, 0, 0, 1.003867, 0, 0, 0, 10.026607, -0.069247484, 0, 0)
size = Vector3(0.9819336, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="City"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8419139, 9.801544, 1.1312305)
size = Vector3(1, 20.603088, 2.7036133)

[node name="CSGBox3D5" type="CSGBox3D" parent="City"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8419139, 2.8789673, -3.9952753)
size = Vector3(1, 6.7579346, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="City"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8419139, 2.8789673, -1.5998366)
size = Vector3(1, 6.7579346, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="City"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8419139, 2.8789673, 3.7400331)
size = Vector3(1, 6.7579346, 1)

[node name="TreeLine" type="Node3D" parent="."]
transform = Transform3D(-0.04534556, 0, 0.9989713, 0, 1, 0, -0.9989713, 0, -0.04534556, -15.335189, 0, 18)

[node name="HintTree" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 7.450581e-09, 0, 1, 0, -7.450581e-09, 0, 1, 0, 0, 0)

[node name="HintTree2" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.1175871e-08, 0, 1, 0, -1.1175871e-08, 0, 1, 8.036486, 0, 0.36479568)

[node name="HintTree3" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.1175871e-08, 0, 1, 0, -1.1175871e-08, 0, 1, 3.827815, 0, 0.17375469)

[node name="HintTree4" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.1175871e-08, 0, 1, 0, -1.1175871e-08, 0, 1, 12.864069, 0, 0.58392906)

[node name="HintTree5" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.1175871e-08, 0, 1, 0, -1.1175871e-08, 0, 1, 16.414297, 0, 0.7450819)

[node name="HintTree6" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.4901161e-08, 0, 1, 0, -1.4901161e-08, 0, 1, 24.450783, 0, 1.1098776)

[node name="HintTree7" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.4901161e-08, 0, 1, 0, -1.4901161e-08, 0, 1, 20.242111, 0, 0.91883755)

[node name="HintTree8" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.4901161e-08, 0, 1, 0, -1.4901161e-08, 0, 1, 29.278366, 0, 1.329011)

[node name="HintTree9" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.8626451e-08, 0, 1, 0, -1.8626451e-08, 0, 1, 26.86082, 0, 1.2192755)

[node name="HintTree10" parent="TreeLine" instance=ExtResource("3_wqpna")]
transform = Transform3D(1, 0, 1.8626451e-08, 0, 1, 0, -1.8626451e-08, 0, 1, 35.89707, 0, 1.6294489)

[node name="RightArea" type="Area3D" parent="."]

[node name="Right" type="CollisionShape3D" parent="RightArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5631409, 7.949175, -22.347483)
shape = SubResource("BoxShape3D_mbl57")

[node name="LeftArea" type="Area3D" parent="."]

[node name="Left" type="CollisionShape3D" parent="LeftArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.737671, 7.766552, 24.103392)
shape = SubResource("BoxShape3D_i3nr6")

[node name="RightSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -23)

[node name="LeftSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 21.724312)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.4703484e-08, -0.013665496, 0.99990666, -5.9733307e-10, 0.99990666, 0.013665496, -1, 1.361794e-11, -4.4707477e-08, 60.52121, 9.124836, 0.087064505)
fov = 29.7
size = 25.587
near = 0.001

[connection signal="body_entered" from="RightArea" to="." method="_on_right_area_body_entered"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_left_area_body_entered"]
